--- a/proposal/sources.bib
+++ b/proposal/sources.bib
@@ -107,3 +107,13 @@ year = "2009"
     howpublished = {https://www.jwz.org/dadadodo/},
     note={Accessed June 12, 2016}
 }
+@article{comon2009,
+  title={Tensor decompositions, alternating least squares and other tales},
+  author={Comon, Pierre and Luciani, Xavier and De Almeida, Andr{\'e} LF},
+  journal={Journal of chemometrics},
+  volume={23},
+  number={7-8},
+  pages={393--405},
+  year={2009},
+  publisher={Wiley Online Library}
+}
