adding citations to bibtex

--- a/sources.bib
+++ b/sources.bib
@@ -54,6 +54,18 @@ year = "2009"
     year={1970},
     publisher={University of California at Los Angeles Los Angeles, CA}
 }
+@article{HARSHMAN1994,
+title = "PARAFAC: Parallel factor analysis",
+journal = "Computational Statistics & Data Analysis",
+volume = "18",
+number = "1",
+pages = "39 - 72",
+year = "1994",
+issn = "0167-9473",
+doi = "https://doi.org/10.1016/0167-9473(94)90132-5",
+url = "http://www.sciencedirect.com/science/article/pii/0167947394901325",
+author = "Richard A. Harshman and Margaret E. Lundy",
+}
 @inproceedings{dietz2007,
     title={Unsupervised prediction of citation influences},
     author={Dietz, Laura and Bickel, Steffen and Scheffer, Tobias},
@@ -116,4 +128,164 @@ year = "2009"
   pages={393--405},
   year={2009},
   publisher={Wiley Online Library}
+}
+@INPROCEEDINGS{baskaran2012,
+author={M. Baskaran and B. Meister and N. Vasilache and R. Lethin},
+booktitle={2012 IEEE Conference on High Performance Extreme
+Computing},
+title={Efficient and scalable computations with sparse tensors},
+year={2012},
+volume={},
+number={},
+pages={1-6},
+doi={10.1109/HPEC.2012.6408676},
+ISSN={},
+month={Sept},}
+@Article{carroll1970,
+author="Carroll, J. Douglas
+and Chang, Jih-Jie",
+title="Analysis of individual differences in multidimensional scaling
+via an n-way generalization of ``Eckart-Young'' decomposition",
+journal="Psychometrika",
+year="1970",
+month="Sep",
+day="01",
+volume="35",
+number="3",
+pages="283--319",
+issn="1860-0980",
+doi="10.1007/BF02310791",
+url="https://doi.org/10.1007/BF02310791"
+}
+@article {bro2003,
+author = {Bro, Rasmus and Kiers, Henk A. L.},
+title = {A new efficient method for determining the number of components in PARAFAC models},
+year="2003"
+journal = {Journal of Chemometrics},
+}
+@article{papalexakis2015,
+author = {Papalexakis, Evangelos and Faloutsos, Christos},
+year = {2015},
+month = {04},
+pages = {5441-5445},
+title = {Fast efficient and scalable Core Consistency Diagnostic for
+the parafac decomposition for big sparse tensors}
+}
+@article {hitchcock1927
+author = {Hitchcock, Frank L.},
+title = {The Expression of a Tensor or a Polyadic as a Sum of
+Products},
+journal = {Journal of Mathematics and Physics},
+volume = {6},
+number = {1-4},
+issn = {1467-9590},
+url = {http://dx.doi.org/10.1002/sapm192761164},
+doi = {10.1002/sapm192761164},
+pages = {164--189},
+year = {1927},
+}
+@incollection{kruskal1989
+ author = {Kruskal, J. B.},
+ chapter = {Rank, Decomposition, and Uniqueness for 3-way and N-way Arrays},
+ title = {Multiway Data Analysis},
+ editor = {Coppi, R. and Bolasco, S.},
+ year = {1989},
+ isbn = {0-444-87410-0},
+ pages = {7--18},
+ numpages = {12},
+ url = {http://dl.acm.org/citation.cfm?id=120565.120567},
+ acmid = {120567},
+ publisher = {North-Holland Publishing Co.},
+ address = {Amsterdam, The Netherlands, The Netherlands},
+} 
+@Inbook{papalexakis2012,
+author="Papalexakis, Evangelos E.  and Faloutsos, Christos and Sidiropoulos, Nicholas D.",
+editor="Flach, Peter A.  and De Bie, Tijl and Cristianini, Nello",
+title="ParCube: Sparse Parallelizable Tensor Decompositions",
+bookTitle="Machine Learning and Knowledge Discovery in Databases: European Conference, ECML PKDD 2012, Bristol, UK, September 24-28, 2012. Proceedings, Part I",
+year="2012",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="521--536",
+isbn="978-3-642-33460-3",
+doi="10.1007/978-3-642-33460-3_39",
+url="https://doi.org/10.1007/978-3-642-33460-3_39"
+}
+@techreport{kolda2006,
+  title={Multilinear operators for higher-order decompositions.},
+  author={Kolda, Tamara Gibson},
+  year={2006},
+  institution={Sandia National Laboratories}
+}
+@article{kolda2009,
+author = {Tamara G. Kolda and Brett W. Bader},
+title = {Tensor Decompositions and Applications},
+journal = {SIAM Review},
+volume = {51},
+number = {3},
+pages = {455-500},
+year = {2009},
+doi = {10.1137/07070111X},
+
+URL = {https://doi.org/10.1137/07070111X},
+eprint = {https://doi.org/10.1137/07070111X}
+}
+@inproceedings{smith2015,
+  title={SPLATT: Efficient and parallel sparse tensor-matrix multiplication},
+  author={Smith, Shaden and Ravindran, Niranjay and Sidiropoulos, Nicholas D and Karypis, George},
+  booktitle={Parallel and Distributed Processing Symposium (IPDPS), 2015 IEEE International},
+  pages={61--70},
+  year={2015},
+  organization={IEEE}
+}
+@inproceedings{lathauwer2009,
+  title={A survey of tensor methods},
+  author={De Lathauwer, Lieven},
+  booktitle={Circuits and Systems, 2009. ISCAS 2009. IEEE International Symposium on},
+  pages={2773--2776},
+  year={2009},
+  organization={IEEE}
+}
+@book{kolecki2002,
+  title={An introduction to tensors for students of physics and engineering},
+  author={Kolecki, Joseph C},
+  year={2002},
+  publisher={National Aeronautics and Space Administration, Glenn Research Center}
+}
+@article{raynolds2009,
+  title={A generalized inner and outer product of arbitrary multi-dimensional arrays using A Mathematics of Arrays (MoA)},
+  author={Raynolds, James E and Mullin, Lenore M},
+  journal={arXiv preprint arXiv:0907.0792},
+  year={2009}
+}
+@article{barbasi2002,
+title = "Evolution of the social network of scientific collaborations",
+journal = "Physica A: Statistical Mechanics and its Applications",
+volume = "311",
+number = "3",
+pages = "590 - 614",
+year = "2002",
+issn = "0378-4371",
+doi = "https://doi.org/10.1016/S0378-4371(02)00736-7",
+url = "http://www.sciencedirect.com/science/article/pii/S0378437102007367",
+author = "A.L Barabási and H Jeong and Z Néda and E Ravasz and A Schubert and T Vicsek",
+keywords = "Random networks, Scaling, Small-word systems, Scale-free networks"
+}
+@article{pianesi2007,
+  title={A multimodal annotated corpus of consensus decision making meetings},
+  author={Pianesi, Fabio and Zancanaro, Massimo and Lepri, Bruno and Cappelletti, Alessandro},
+  journal={Language Resources and Evaluation},
+  volume={41},
+  number={3-4},
+  pages={409--429},
+  year={2007},
+  publisher={Springer}
+}
+@inproceedings{aziz2010,
+  title={Identifying influential bloggers using blogs semantics},
+  author={Aziz, Mehwish and Rafi, Muhammad},
+  booktitle={Proceedings of the 8th International Conference on Frontiers of Information Technology},
+  pages={7},
+  year={2010},
+  organization={ACM}
 }
