added some info about another attribution paper

--- a/sources.bib
+++ b/sources.bib
@@ -289,3 +289,15 @@ keywords = "Random networks, Scaling, Small-word systems, Scale-free networks"
   year={2010},
   organization={ACM}
 }
+@article{burrows2006,
+  title={All the way through: testing for authorship in different frequency strata},
+  author={Burrows, John},
+  journal={Literary and Linguistic Computing},
+  volume={22},
+  number={1},
+  pages={27--47},
+  year={2006},
+  publisher={EADH: The European Association for Digital
+  Humanities}
+}
+
