some more sources and notes

--- a/sources.bib
+++ b/sources.bib
@@ -54,7 +54,7 @@ year = "2009"
     year={1970},
     publisher={University of California at Los Angeles Los Angeles, CA}
 }
-@article{HARSHMAN1994,
+@article{harshman1994,
 title = "PARAFAC: Parallel factor analysis",
 journal = "Computational Statistics & Data Analysis",
 volume = "18",
@@ -300,4 +300,73 @@ keywords = "Random networks, Scaling, Small-word systems, Scale-free networks"
   publisher={EADH: The European Association for Digital
   Humanities}
 }
-
+@article{antonia2014,
+author = {Antonia, Alexis and Craig, Hugh and Elliott, Jack},
+title = {Language chunking, data sparseness, and the value of a long marker list: explorations with word n-grams and authorial attribution},
+journal = {Literary and Linguistic Computing},
+volume = {29},
+number = {2},
+pages = {147-163},
+year = {2014},
+doi = {10.1093/llc/fqt028},
+URL = { + http://dx.doi.org/10.1093/llc/fqt028},
+eprint = {/oup/backfile/content_public/journal/dsh/29/2/10.1093/llc/fqt028/2/fqt028.pdf}
+}
+@inproceedings{than2012,
+  title={Fully sparse topic models},
+  author={Than, Khoat and Ho, Tu Bao},
+  booktitle={Joint European Conference on Machine Learning and Knowledge Discovery in Databases},
+  pages={490--505},
+  year={2012},
+  organization={Springer}
+}
+@inproceedings{kawamae2016,
+  title={N-gram over Context},
+  author={Kawamae, Noriaki},
+  booktitle={Proceedings of the 25th International Conference on World Wide Web},
+  pages={1045--1055},
+  year={2016},
+  organization={International World Wide Web Conferences Steering Committee}
+}
+@inproceedings{stamatatos2011,
+  title={Plagiarism detection based on structural information},
+  author={Stamatatos, Efstathios},
+  booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
+  pages={1221--1230},
+  year={2011},
+  organization={ACM}
+}
+@inproceedings{jiang2014,
+  title={Dynamic topic/citation influence modeling for chronological citation recommendation},
+  author={Jiang, Zhuoren and Liu, Xiaozhong and Gao, Liangcai},
+  booktitle={Proceedings of the 5th International Workshop on Web-scale Knowledge Representation Retrieval \& Reasoning},
+  pages={15--18},
+  year={2014},
+  organization={ACM}
+}
+@incollection{bader2007,
+  author      = "Bader, Brett W., Berry, Michael W., and Browne, Murray",
+  title       = "Discussion Tracking in Enron Email Using PARAFAC",
+  editor      = "Berry, Michael W. and Castellanos, Malu",
+  booktitle   = "Survey of Text Mining"
+  publisher   = "Springer"
+  year        = 2007,
+  pages       = "147-163",
+  chapter     = 8,
+}
+@incollection{burrows2017,
+  author      = "Burrows, John and Craig, Hugh",
+  title       = "The Joker in the Pack?: Marlowe, Kyd, and the Co-authorship of Henry VI, Part 3",
+  editor      = "Taylor, Gary and Egan, Gabriel",
+  booktitle   = "The New Oxford Shakespeare Authorship Companion",
+  publisher   = "Oxford University Press",
+  year        = 2017,
+  pages       = "194-217",
+  chapter     = 11,
+}
+@book{craig2009,
+  author = "Craig, Hugh and Kinney, Arthur F.",
+  title  = "Sheakespeare, Computers, and the Mystery of Authorship",
+  year   = 2009,
+  publisher = "Cambridge University Press",
+}
