--- a/sources.bib
+++ b/sources.bib
@@ -370,3 +370,13 @@ eprint = {/oup/backfile/content_public/journal/dsh/29/2/10.1093/llc/fqt028/2/fqt
   year   = 2009,
   publisher = "Cambridge University Press",
 }
+@article{liu2012sparse,
+  title={Sparse non-negative tensor factorization using columnwise coordinate descent},
+  author={Liu, Ji and Liu, Jun and Wonka, Peter and Ye, Jieping},
+  journal={Pattern Recognition},
+  volume={45},
+  number={1},
+  pages={649--656},
+  year={2012},
+  publisher={Elsevier}
+}
