--- a/notebook/literature-tensor.org
+++ b/notebook/literature-tensor.org
@@ -1,8 +1,9 @@
-==========================================
-File: 1-s2.0-0167947394901325-parafac-harshman-94.pdf
-Title: PARAFAC: Parallel Factor Analysis
-Authors: Richard A. Harshman and Margaret Lundy
-Cite: harshman1994
+* PARAFAC: Parallel Factor Analysis
+|---------+-------------------------------------------------|
+| File    | 1-s2.0-0167947394901325-parafac-harshman-94.pdf |
+| Authors | Richard A. Harshman and Margaret Lundy          |
+| Cite    | harshman1994                                    |
+|---------+-------------------------------------------------|
 
 - Review of PARAFAC
 - Clarifies the properties of the factors a bit.
@@ -10,155 +11,169 @@ Cite: harshman1994
 - Implicit Axis instead of hyperplanes
 
 
-==========================================
-File: 1-s2.0-S0169743997000324-parafac.pdf
-Title: PARAFAC: Tutorial and Applications
-Author: Rasmus Bro
-Cite: bro1997
+* PARAFAC: Tutorial and Applications
+|--------+--------------------------------------|
+| File   | 1-s2.0-S0169743997000324-parafac.pdf |
+| Author | Rasmus Bro                           |
+| Cite   | bro1997                              |
+|--------+--------------------------------------|
+
 - Tutorial on PARAFAC
 - Introdcution of chemometrics and use of PARAFAC in spectral
   analysis.
 
 
-==========================================
-File: 1-s2.0-S0925231212009083-main-tensor.pdf
-Title: Robust Probablalistic Tensor Analysis for Time-Variant
-       collaborative filtering
-Author: Jing Pan et al 
+* Robust Probablalistic Tensor Analysis for Time-Variant collaborative filtering
+|--------+------------------------------------------|
+| File   | 1-s2.0-S0925231212009083-main-tensor.pdf |
+| Author | Jing Pan et al                           |
+|--------+------------------------------------------|
 
 
-==========================================
-File: Baskaranpaper.pdf
-Title: Effecient and Scalable Computations with Sparse Tensors
-Author: Muthu Baskaran
-Cite: baskaran2012
+* Effecient and Scalable Computations with Sparse Tensors
+|--------+-------------------|
+| File   | Baskaranpaper.pdf |
+| Author | Muthu Baskaran    |
+| Cite   | baskaran2012      |
+|--------+-------------------|
 
 - Mathematical operations on sparse tensors. 
 - Storage of sparse tensors.
 - Addition and Multiplication
 
 
-==========================================
-File: candecomp.pdf
-Title: Analysis of Individual Differences in Multidimensional Scaling
-    Via An N-Way Generalization of "Eckart-Young" decomposition
-Author: Caroll and Chang
-Cite: caroll1970
+* Analysis of Individual Differences in Multidimensional Scaling Via An N-Way Generalization of "Eckart-Young" decomposition
+|--------+------------------|
+| File   | candecomp.pdf    |
+| Author | Caroll and Chang |
+| Cite   | caroll1970       |
+|--------+------------------|
 
 - This is the "CANDECOMP" paper
 - Usually paired with Harshmann
 - Good descriptions of the properties of the decompositions.
 
 
-==========================================
-File: ComoLA09-jchemo.pdf
-Title: Tensor Decompositions, Alternating Least Squares and Other
-    Tales
-Author: Pierre Comon et al
-Cite: comon2009
+* Title: Tensor Decompositions, Alternating Least Squares and Other Tales
+|--------+---------------------|
+| File   | ComoLA09-jchemo.pdf |
+| Author | Pierre Comon et al  |
+| Cite   | comon2009           |
+|--------+---------------------|
 
-- Narrative about ALS and PARAFAC
 - Nice analogies and tutorial explanation of PARAFAC
 - Tribute to Harshman
 
-==========================================
-File: corcondia.pdf
-Title: A new efficient method for determining the number of components
-    in PARAFAC model
-Author: Rasmus Bro and Henk A. L. Kiers
-Cite: bro2003
+
+* Title: A new efficient method for determining the number of components in PARAFAC model
+|--------+---------------------------------|
+| File   | corcondia.pdf                   |
+| Author | Rasmus Bro and Henk A. L. Kiers |
+| Cite   | bro2003                         |
+|--------+---------------------------------|
 
 - A diagnostic for testing the number of factors in PARAFAC models.
 - Could be a nice way to optimize my decompositions!
 
-==========================================
-File: efficient_corcondia_icassp2015.pdf
-Title: Fast Efficient and Scalable Core Consistency Diagnostic for
-    PARAFAC Decomposition for Big Sparse Tensors
-Author: Evangelos E. Papalexakis and Chrstos Faloutsos
-Cite: papalexakis2015
+* Fast Efficient and Scalable Core Consistency Diagnostic for PARAFAC Decomposition for Big Sparse Tensors
+|--------+------------------------------------------------|
+| File   | efficient_corcondia_icassp2015.pdf             |
+| Author | Evangelos E. Papalexakis and Chrstos Faloutsos |
+| Cite   | papalexakis2015                                |
+|--------+------------------------------------------------|
 
 - CORCONDIA applied to sparse tensors
 - Talks about issues with sparse tensors
 
-==========================================
-File: harshmann-wpppfac0.pdf
-Title: Foundations of the PARAFAC Procedure: Models and Conditions for
-    an "Explanator" multmodal factor analysis
-Author: R. A. Harshman
-Cite: harshman1970
+* Foundations of the PARAFAC Procedure: Models and Conditions for an "Explanator" multmodal factor analysis
+|--------+--------------------------------------+---------------------------------------------------------------------|
+| File   | harshmann-wpppfac0.pdf               |                                                                     |
+| Title  | Foundations of the PARAFAC Procedure | Models and Conditions for an "Explanator" multmodal factor analysis |
+| Author | R. A. Harshman                       |                                                                     |
+| Cite   | harshman1970                         |                                                                     |
+|--------+--------------------------------------+---------------------------------------------------------------------|
 
 - This is the seminal paper on PARAFAC
 - Rediscovery / popularization of Hitchcock
 - Proportional Profiles
 - ALS Algorithm Described
 
-
-==========================================
-File: hitchcock1927.pdf
-Title: The Expression of a Tensor or a Polyadic as a Sum of Products
-Author: Frank L. Hitchcock
-Cite: hitchcock1927
+* The Expression of a Tensor or a Polyadic as a Sum of Products
+|--------+--------------------|
+| File   | hitchcock1927.pdf  |
+| Author | Frank L. Hitchcock |
+| Cite   | hitchcock1927      |
+|--------+--------------------|
 
 - Original paper about Tensor decomposition.
 - Description of Polyadic form
 - Description of properties of the factors
 
 
-==========================================
-File: jbkrank.pdf
-Title: Rank, Decomposition, and Unqiueness for 3-2ay and n-way arrays
-Author: J.B. Kruskal
-Cite: kruskal1989
+* Rank, Decomposition, and Unqiueness for 3-2ay and n-way arrays
+|--------+--------------|
+| File   | jbkrank.pdf  |
+| Author | J.B. Kruskal |
+| Cite   | kruskal1989  |
+|--------+--------------|
 
 - The Kruskal Operator
 
 
-==========================================
-File: Low-n-rank-tensor-recovery-based-on-multi-linear-augmented-Lagrange-multiplier-method_2013_Neurocomputing.pdf
-Title: Low-n-rank tensor recovery based on multi-linear augmented Lagrange multiplier method
-Authors; Huachun Tan et. al
+* Low-n-rank tensor recovery based on multi-linear augmented Lagrange multiplier method
+|---------+---------------------------------------------------------------------------------------------------------------|
+| File    | Low-n-rank-tensor-recovery-based-on-multi-linear-augmented-Lagrange-multiplier-method_2013_Neurocomputing.pdf |
+| Authors | Huachun Tan et. al                                                                                            |
+|---------+---------------------------------------------------------------------------------------------------------------|
 
-==========================================
-File: parcube-sparse tensor.pdf
-Title: ParCube: Sparse Parallelizable Tensor Decompositions
-Authors: Evangelos E. Paplexakis et al
-Cite: papalexakis2012
+* ParCube: Sparse Parallelizable Tensor Decompositions
+|---------+-------------------------------|
+| File    | parcube-sparse tensor.pdf     |
+| Authors | Evangelos E. Paplexakis et al |
+| Cite    | papalexakis2012               |
+|---------+-------------------------------|
 
-==========================================
-File: SAND2006-2081-Multilinear Operators.pdf
-Title: Multilinear operators for higher-order decompositions
-Author: Tamara G. Kolda
-Cite: kolda2006
-
-==========================================
-File: splatt.pdf
-Title:  SPLATT: Efficient and Parallel Sparse Tensor-Matrix Multiplication
-Author: Shaden Smith et al
-Cite: smith2017
-
-==========================================
-File: surveyTesnors-ldl-09-34.pdf
-Title: A Survey of Tensor Methods
-Author: Lieven De Lathauwer
-Cite:lathauwer2009
+* Multilinear operators for higher-order decompositions
+|--------+-----------------------------------------|
+| File   | SAND2006-2081-Multilinear Operators.pdf |
+| Author | Tamara G. Kolda                         |
+| Cite   | kolda2006                               |
+|--------+-----------------------------------------|
 
 
-==========================================
-File: tensordecompositions.pdf
-Title: Tensor Decompositions and Applications
-Authors: Tamara G. Kolda, Brett W. Bader
-Cite: kolda2009
+* SPLATT: Efficient and Parallel Sparse Tensor-Matrix Multiplication
+|--------+--------------------|
+| File   | splatt.pdf         |
+| Author | Shaden Smith et al |
+| Cite   | smith2017          |
+|--------+--------------------|
+
+* A Survey of Tensor Methods
+|--------+-----------------------------|
+| File   | surveyTesnors-ldl-09-34.pdf |
+| Author | Lieven De Lathauwer         |
+| Cite   | lathauwer2009               |
+|--------+-----------------------------|
 
 
-==========================================
-File: Tensors_TM2002211716.pdf
-Title: An Introduction to Tensors for Students of Physics and Engineering
-Authors: Joseph C. Kolecki
-Cite: kolecki2002
+* Tensor Decompositions and Applications
+|---------+---------------------------------|
+| File    | tensordecompositions.pdf        |
+| Authors | Tamara G. Kolda, Brett W. Bader |
+| Cite    | kolda2009                       |
+|---------+---------------------------------|
 
-==========================================
-File: 0907.0792.pdf
-Title: A generalized inner and outer product of arbitrary multi-dimensional arrays using A Mathematics of Arrays (MoA)
-Autors: James E. Raynolds
-Cite: raynolds2009
+* An Introduction to Tensors for Students of Physics and Engineering
+|---------+--------------------------|
+| File    | Tensors_TM2002211716.pdf |
+| Authors | Joseph C. Kolecki        |
+| Cite    | kolecki2002              |
+|---------+--------------------------|
+
+* A generalized inner and outer product of arbitrary multi-dimensional arrays using A Mathematics of Arrays (MoA)
+|--------+-------------------|
+| File   | 0907.0792.pdf     |
+| Autors | James E. Raynolds |
+| Cite   | raynolds2009      |
+|--------+-------------------|
+
